# reversi

./: .gitignore  Cargo.toml  README.md  data.txt  stats_random.ipynb
benches/: board.rs  game.rs
src/: board.rs  game.rs  lib.rs  search.rs
src/board/: bit.rs  enum1d.rs  enum2d.rs  naive.rs
src/search/: random.rs
tests/: board.rs  game.rs
tests/board_cases/: 001.txt  002.txt
