[package]
name = "reversi"
version = "0.1.0"
authors = ["Nakayama Daiju <42.daiju@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"
rand_pcg = "*"

[dev-dependencies]
criterion = "*"

[[bench]]
name = "board"
harness = false
